se agrego auth al swagger docs
