# app/controllers/carritos_controller.rb
@@ -1,12 +1,12 @@
 class CarritosController < ApplicationController
   before_action :set_carrito, except: :create
-  before_action :set_producto
-  before_action :set_order
+  before_action :set_producto, except: :ver_carrito
+  before_action :set_order, except: :ver_carrito
   before_action :authorize_request
   # GET /carritos/1
   def ver_carrito
-    Usuario.find(params[:id]).compra
-    render json: Usuario.find(params[:id]).compra
+    
+    render json: @carrito
 
   end
 
@@ -53,7 +53,7 @@ class CarritosController < ApplicationController
   # #destroy -> quitarProducto
   def quitar_producto
     new_orders = @carrito.orders.select {|a| a.producto.nombre != params[:nombre_producto] }
-    
+  
 
     @carrito.update_attributes(
       orders: new_orders,
