# app/controllers/compras_controller.rb
@@ -1,48 +1,11 @@
 class ComprasController < ApplicationController
   before_action :set_venta, only: %i[ show update destroy ]
-
-  # GET /compras
-  def index
-    @compras = Compra.all
-    producto = Producto.where(nombre: params[:producto_attributes][:nombre])
-    render json: @compras
-  end
+  before_action :authorize_request
+ 
 
   # GET /compras/1
   def show
     render json: @compra
-  end
-
-  # POST /compras
-  def create
-    producto = Producto.where(nombre: params[:producto_attributes][:nombre])
-    
-    #total: params[:comprado] * producto.precio
-    @compra = Compra.create(
-      productos: [producto.first],
-      comprado: params[:comprado],
-      total: params[:comprado] 
-      )
-
-    if @compra.save
-      render json: @compra, status: :created, location: @compras
-    else
-      render json: @compra.errors, status: :unprocessable_entity
-    end
-  end
-
-  # PATCH/PUT /compras/1
-  def update
-    if @compra.update(venta_params)
-      render json: @compra
-    else
-      render json: @compra.errors, status: :unprocessable_entity
-    end
-  end
-
-  # DELETE /compras/1
-  def destroy
-    @compra.destroy
   end
 
   private
@@ -53,6 +16,6 @@ class ComprasController < ApplicationController
 
     # Only allow a list of trusted parameters through.
     def compra_params
-      params.require(:compra).permit(:comprado, producto_attributes: [:nombre])
+      params.require(:compra).permit( :nombre_producto)
     end
 end
