# app/models/compra.rb
@@ -3,7 +3,5 @@ class Compra
   include Mongoid::Timestamps
   has_and_belongs_to_many :orders, inverse_of: nil
   belongs_to :usuario, optional: true
-
-  field :comprado, type: Integer
   field :total, type: Float
 end
